@@ -27,6 +27,16 @@ if (defined('UDB_INTEGRATION') && USER_ID) {
   $USER_DATA = array_merge($USER_DATA,$cpg_udb->get_user_infos(USER_ID));
 }
 
+$js_contact['check']['one'] = (!USER_ID && $CONFIG['contact_form_guest_name_field'] == 2) ? true : false;
+$js_contact['check']['two'] = (!USER_ID) ? true : false;
+$js_contact['check']['three'] = (!USER_ID && $CONFIG['contact_form_guest_email_field'] == 2) ? true : false;
+$js_contact['check']['four'] = ($CONFIG['contact_form_subject_field'] == 2) ? true : false;
+$js_contact['your_name'] = $lang_contact_php['your_name'];
+$js_contact['name_field_invalid'] = $lang_contact_php['name_field_invalid'];
+$js_contact['email_field_invalid'] = $lang_contact_php['email_field_invalid'];
+set_js_var('contact', $js_contact);
+js_include('js/contact.js');
+
 pageheader($lang_contact_php['title']);
 // determine if the visitor is allowed to access
 if (!USER_ID) { // visitor is guest
@@ -291,73 +301,7 @@ EOT;
     </tr>
 EOT;
   endtable();
-  print <<< EOT
-  </form>
-  <script type="text/javascript">
-    function validateContactFormFields() {
-EOT;
-  if (!USER_ID && $CONFIG['contact_form_guest_name_field'] == 2) {
-  print <<< EOT
-        if(document.contactForm.sender_name.value == '') {
-         //alert('{$lang_contact_php['name_field_mandatory']}');
-         $('#name_remark').css('display', 'block');
-         document.contactForm.sender_name.focus();
-         return false;
-        }
-
-EOT;
-  }
-  if (!USER_ID) {
-  print <<< EOT
-        if(document.contactForm.sender_name.value == '{$lang_contact_php['your_name']}') {
-         alert('{$lang_contact_php['name_field_invalid']}');
-         document.contactForm.sender_name.value = '';
-         $('#name_remark').css('display', 'block');
-         document.contactForm.sender_name.focus();
-         return false;
-        }
-
-EOT;
-  }
-  if (!USER_ID && $CONFIG['contact_form_guest_email_field'] == 2) {
-  print <<< EOT
-        if(document.contactForm.sender_email.value == '') {
-         //alert('{$lang_contact_php['email_field_mandatory']}');
-         $('#email_remark').css('display', 'block');
-         document.contactForm.sender_email.focus();
-         return false;
-        }
-
-        string=document.contactForm.sender_email.value;
-        if (string.search(/^\w+((-\w+)|(\.\w+))*\@[A-Za-z0-9]+((\.|-)[A-Za-z0-9]+)*\.[A-Za-z0-9]+$/) == -1) {
-        $('#email_remark').css('display', 'block');
-        alert('{$lang_contact_php['email_field_invalid']}');
-        document.contactForm.sender_email.focus();
-        return false;
-        }
-
-EOT;
-  }
-  if ($CONFIG['contact_form_subject_field'] == 2) {
-  print <<< EOT
-        if(document.contactForm.subject.value == '') {
-         //alert('{$lang_contact_php['subject_field_mandatory']}');
-         $('#subject_remark').css('display', 'block');
-         document.contactForm.subject.focus();
-         return false;
-        }
-EOT;
-  }
-  print <<< EOT
-        if(document.contactForm.message.value == '') {
-         //alert('{$lang_contact_php['message_field_mandatory']}');
-         $('#message_remark').css('display', 'block');
-         document.contactForm.message.focus();
-         return false;
-        }
-    }
-  </script>
-EOT;
+  print '</form>';
 
 pagefooter();
 ob_end_flush();
